fix(text-input): changes alignment
affects: @fremtind/jkl-text-input-react, @fremtind/jkl-text-input

changes alignment of noHits in the autosuggest component

--- a/packages/text-input/autosuggest.scss
+++ b/packages/text-input/autosuggest.scss
@@ -19,7 +19,6 @@ $item-font-size: $font-size-3;
     }
 
     &__no-hits-message {
-        text-align: center;
         margin-bottom: $component-spacing--large;
     }
 
